Adding view classes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "DogWatcher",
-  "name": "DogWatcher",
+  "name": "DogWatcher Gameboard Stats",
   "icons": [
     {
       "src": "favicon.ico",
