--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "chart.js": "^4.4.1",
     "parse5": "^7.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
