Update index.js for chart integration.

--- a/src/config/GlobalConfig.json
+++ b/src/config/GlobalConfig.json
@@ -1,6 +1,7 @@
 {
-    "gnlUrl":"https://play.gamenightlive.com",
-    "gnlLeaderBoardPath":"/leaderboards/view/8",
-    "teamKey":"10010",
+    "scoreBoardBaseUrl":"https://play.gamenightlive.com",
+    "scoreBoardBoardPath":"/leaderboards/view/",
+    "scoreBoardBoardNumber":"8",
+    "teamNumber":"10010",
     "teamName":"Raw Dogs"
 }
