--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --ci",
     "eject": "react-scripts eject",
     "debug": "react-scripts --inspect-brk test --runInBand --no-cache"
   },
